# pamela

./: Cargo.toml  LICENSE-MIT  README.md
examples/: load_conf.rs
libpam-sys/: Cargo.toml  build.rs
libpam-sys/src/: consts.rs  lib.rs
pam-wrapped/: Cargo.toml
pam-wrapped/src/: lib.rs
pamela-client/: Cargo.toml
pamela-core/: Cargo.toml
pamela-core/examples/: load_conf.rs
pamela-core/src/: chain.rs  control.rs  lib.rs  management_group.rs  module_path.rs  parsing.rs  return_code.rs
pamela-linuxpam-conf/: Cargo.toml
pamela-linuxpam-conf/src/: control_flag.rs  facility.rs  lib.rs  module_arguments.rs  parse.rs  return_code.rs  service.rs
pamela-linuxpam-conf/src/snapshots/: pamela_linuxpam__parse__tests__int_test_reboot.snap  pamela_linuxpam__parse__tests__int_test_sudo_arch.snap  pamela_linuxpam__parse__tests__int_test_system_auth_arch.snap  pamela_linuxpam__parse__tests__int_test_user_mod_arch.snap  pamela_linuxpam__tests__int_test_reboot.snap  pamela_linuxpam__tests__int_test_sudo_arch.snap  pamela_linuxpam__tests__int_test_system_auth_arch.snap  pamela_linuxpam__tests__int_test_user_mod_arch.snap
src/: control.rs  module_arguments.rs  return_code.rs
